--- a/.giuthub/workflows/workflow.yml
+++ b/.giuthub/workflows/workflow.yml
@@ -1,18 +1,15 @@
-# sample workflow snippet
-name: Add Env Secret
+name: secrets
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  build:
+  add-env:
+    name: Add Secret as Environment Variable
+    runs-on: ubuntu-latest
+    env:
+      GATSBY_GOOGLE_ANALYTICS_ID: ${{ secrets.MY_SECRET }}
     steps:
-      - name: Add env secret
-        env:
-          token:
-            ${{ secrets.MY_SECRET }}
-            # deploy token is used to build and deploy to a gh-pages branch
-            # (needs permission to create a branch, build the app and modify that branch,
-            # push changes to that branch, and deploy to github pages)
+      - name: Step One
+        uses: actions/checkout@v2
+      - name: Step Two
+        run: env | sort
